--- a/tng_config.yaml
+++ b/tng_config.yaml
@@ -2,7 +2,7 @@ connector:
   agentId: "***REMOVED***"
   appName: "tng"
   appType: "VEMA"
-  controllerAddr: ":8099"
+  controllerAddr: "0.0.0.0:8099"
   natsAckWait: 30
   natsMaxInflight: 2147483647 # math.MaxInt32
   natsFilestoreDir: "src/main/resources/datastore"
@@ -10,15 +10,4 @@ connector:
   natsHost: ":4222"
   logLevel: 2
 dsConnection:
-  hostName: "localhost"
-  userName: "***REMOVED***"
-  password: "frugfri328y49rgfbriegfbri" #change to valid one to test
-gwConnections:
-  -
-    hostName: "localhost:80"
-    userName: "RESTAPIACCESS"
-    password: "***REMOVED***"
-#  -
-#    hostName: "localhost:88"
-#    userName: "RESTAPIACCESS"
-#    password: "***REMOVED***"
+  hostName: "dalekservices:3001"
