--- a/tng_config.yaml
+++ b/tng_config.yaml
@@ -2,7 +2,7 @@ connector:
   agentId: "76AE2920-0F88-44A5-BF1D-1B6B61B842C2"
   appName: "tng"
   appType: "VEMA"
-  controllerAddr: ":8099"
+  controllerAddr: "0.0.0.0:8099"
   natsAckWait: 30
   natsMaxInflight: 2147483647 # math.MaxInt32
   natsFilestoreDir: "nats/datastore"
@@ -10,15 +10,4 @@ connector:
   natsHost: ":4222"
   logLevel: 2
 dsConnection:
-  hostName: "localhost"
-  userName: "admin"
-  password: "jg3gj3r=4[gjfr34=[gjr34egjr[e4gevgrfe" #change to valid one to test
-gwConnections:
-  -
-    hostName: "localhost:80"
-    userName: "RESTAPIACCESS"
-    password: "63c5BtYDNAPANvNqAkh9quYszwVrvLaruxmzvM4P1FSw"
-#  -
-#    hostName: "localhost:88"
-#    userName: "RESTAPIACCESS"
-#    password: "63c5BtYDNAPANvNqAkh9quYszwVrvLaruxmzvM4P1FSw"
+  hostName: "dalekservices:3001"
