example connector in 'Provisioning Waiting' state

--- a/connectors/server-connector/tng_config.yaml
+++ b/connectors/server-connector/tng_config.yaml
@@ -1,6 +1,7 @@
+# this is configuration for a connector in Provisioning Waiting state, note the empty agentId
 connector:
   agentId: ""
-  appName: "tng"
+  appName: "tng-server"
   appType: "SERVER"
   controllerAddr: "0.0.0.0:8099"
   natsAckWait: 30
