GROUNDWORK-822: uppercase app name

--- a/connectors/server-connector/tng_config.yaml
+++ b/connectors/server-connector/tng_config.yaml
@@ -1,6 +1,6 @@
 connector:
   agentId: ""
-  appName: "server"
+  appName: "SERVER"
   appType: "SERVER"
   controllerAddr: "0.0.0.0:8099"
   natsAckWait: 30
