--- a/connectors/server-connector/tng_config.yaml
+++ b/connectors/server-connector/tng_config.yaml
@@ -1,31 +1,14 @@
 connector:
-    agentId: af554d5f-0f3b-494b-9c88-577e45626911
-    appName: SERVER
-    appType: SERVER
-    controllerAddr: 0.0.0.0:8099
-    controllerCertFile: ""
-    controllerKeyFile: ""
-    natsAckWait: 30
-    natsMaxInflight: 2147483647
-    natsFilestoreDir: nats/datastore
-    natsStoreType: FILE
-    natsHost: 127.0.0.1:4222
-    logConsPeriod: 0
-    logFile: ""
-    logLevel: 0
-    enabled: true
+  agentId: "***REMOVED***"
+  appName: "tng"
+  appType: "VEMA"
+  controllerAddr: "0.0.0.0:8099"
+  natsAckWait: 30
+  natsMaxInflight: 2147483647 # math.MaxInt32
+  natsFilestoreDir: "nats/datastore"
+  natsStoreType: "FILE"
+  natsHost: "127.0.0.1:4222"
+  logConsPeriod: 0 # seconds; 0 - off consolidation
+  logLevel: 2 # 0 - Error; 1 - Warn; 2 - Info; 3 - Debug
 dsConnection:
-    hostName: localhost
-gwConnections:
-  - hostName: https://localhost
-    userName: root
-    password: root
-    enabled: true
-    isChild: false
-    displayName: Local Groundwork
-    mergeHosts: false
-    localConnection: true
-    deferOwnership: Yield
-    prefixResourceNames: false
-    resourceNamePrefix: ""
-    sendAllInventory: true
+  hostName: ""
