GROUNDWORK-949: rename TNG to TCG.

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 *.o
 *.dylib
 *.iml
-tng
+tcg
 test_libtransit
 connectors/server-connector/server-connector
 connectors/elastic-connector/elastic-connector
