--- a/connectors/elastic-connector/tcg_config.yaml
+++ b/connectors/elastic-connector/tcg_config.yaml
@@ -1,14 +1,32 @@
 connector:
-  agentId: ""
-  appName: "ELASTIC"
-  appType: "ELASTIC"
-  controllerAddr: "0.0.0.0:8099"
-  natsAckWait: 30
-  natsMaxInflight: 2147483647 # math.MaxInt32
-  natsFilestoreDir: "nats/datastore"
-  natsStoreType: "FILE"
-  natsHost: "127.0.0.1:4222"
-  logConsPeriod: 0 # seconds; 0 - off consolidation
-  logLevel: 2
+    agentId: b863aa2b-9acb-4646-959a-237a7b64a378
+    appName: ELASTIC
+    appType: ELASTIC
+    controllerAddr: 0.0.0.0:8099
+    controllerCertFile: ""
+    controllerKeyFile: ""
+    natsAckWait: 30
+    natsMaxInflight: 2147483647
+    natsFilestoreDir: nats/datastore
+    natsStoreType: FILE
+    natsHost: 127.0.0.1:4222
+    logConsPeriod: 0
+    logFile: ""
+    logLevel: 2
+    enabled: true
 dsConnection:
-  hostName: "localhost:3001"
+    hostName: localhost
+gwConnections:
+  - id: 1
+    hostName: https://localhost
+    userName: remote
+    password: remote
+    enabled: true
+    isChild: false
+    displayName: Local Groundwork
+    mergeHosts: false
+    localConnection: true
+    deferOwnership: Yield
+    prefixResourceNames: false
+    resourceNamePrefix: ""
+    sendAllInventory: true
