--- a/connectors/prometheus-connector/tcg_config.yaml
+++ b/connectors/prometheus-connector/tcg_config.yaml
@@ -1,7 +1,7 @@
 connector:
-  agentId: "***REMOVED***"
-  appName: "tcg"
-  appType: "VEMA"
+  agentId: ""
+  appName: "PROMETHEUS"
+  appType: "PROMETHEUS"
   controllerAddr: "0.0.0.0:8099"
   natsAckWait: 30
   natsMaxInflight: 2147483647 # math.MaxInt32
@@ -9,6 +9,6 @@ connector:
   natsStoreType: "FILE"
   natsHost: "127.0.0.1:4222"
   logConsPeriod: 0 # seconds; 0 - off consolidation
-  logLevel: 2 # 0 - Error; 1 - Warn; 2 - Info; 3 - Debug
+  logLevel: 2
 dsConnection:
   hostName: ""
