--- a/examples/prometheus/push/javascript/package.json
+++ b/examples/prometheus/push/javascript/package.json
@@ -2,6 +2,7 @@
   "name": "javascript",
   "version": "1.0.0",
   "dependencies": {
-    "prom-client": "^12.0.0"
+    "prom-client": "^12.0.0",
+    "request": "^2.88.2"
   }
 }
