Rename Prometheus -> APM

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,9 @@ tcg
 test_libtransit
 connectors/checker-connector/checker-connector
 connectors/elastic-connector/elastic-connector
-connectors/prometheus-connector/prometheus-connector
+connectors/apm-connector/apm-connector
 connectors/server-connector/server-connector
-examples/prometheus/pull/go/go
+examples/apm/pull/go/go
 
 # Temporary files
 ,*
