--- a/connectors/elastic-connector/tcg_config.yaml
+++ b/connectors/elastic-connector/tcg_config.yaml
@@ -5,9 +5,9 @@ connector:
   controllerAddr: "0.0.0.0:8099"
   natsAckWait: 30
   natsMaxInflight: 2147483647 # math.MaxInt32
-  natsFilestoreDir: "nats/datastore"
+  natsFilestoreDir: "natsstore"
   natsStoreType: "FILE"
   logConsPeriod: 0 # seconds; 0 - off consolidation
-  logLevel: 2
+  logLevel: 1 # 0 - Error; 1 - Warn; 2 - Info; 3 - Debug
 dsConnection:
   hostName: ""
