--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
 notifications:
   slack:
     rooms:
-      - gwos:***REMOVED***#bot-noise
+      - $SLACK_BOT_NOISE
     on_pull_requests: true
 
   webhooks:
