GROUNDWORK-1223: Cleanup SNMP default config

--- a/connectors/snmp-connector/tcg_config.yaml
+++ b/connectors/snmp-connector/tcg_config.yaml
@@ -1,12 +1,10 @@
 connector:
   agentId: ""
-  appName: "SNMP"
-  appType: "SNMP"
-  controllerAddr: "0.0.0.0:8099"
-  natsAckWait: 30
-  natsMaxInflight: 2147483647 # math.MaxInt32
-  natsFilestoreDir: "natsstore"
-  natsStoreType: "FILE"
+  appName: SNMP
+  appType: SNMP
+  controllerAddr: 0.0.0.0:8099
+  natsFilestoreDir: natsstore
+  natsStoreType: FILE
   logConsPeriod: 0 # seconds; 0 - off consolidation
   logLevel: 1 # 0 - Error; 1 - Warn; 2 - Info; 3 - Debug
 dsConnection:
