GROUNDWORK-1690 Separate NSCA connector from Checker

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ connectors/apm-connector/apm-connector
 connectors/checker-connector/checker-connector
 connectors/elastic-connector/elastic-connector
 connectors/kubernetes-connector/kubernetes-connector
+connectors/nsca-connector/nsca-connector
 connectors/server-connector/server-connector
 examples/apm/pull/go/go
 
