GROUNDWORK-1731: Move sharePointSite/subsite and outlookEmail from env vars to config

--- a/connectors/office-connector/tcg_config.yaml
+++ b/connectors/office-connector/tcg_config.yaml
@@ -1,7 +1,7 @@
 connector:
   agentId: ""
-  appName: OFFICE365
-  appType: OFFICE365
+  appName: OFFICE
+  appType: OFFICE
   controllerAddr: 0.0.0.0:8099
   natsFilestoreDir: natsstore
   natsStoreType: FILE
