GROUNDWORK-1955: Cleanup more linted warnings

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -37,7 +37,7 @@ linters:
     - structcheck
     - stylecheck
     - unconvert
-    - unparam
+# TODO:    - unparam
     - unused
     - varcheck
     - whitespace
