cleanup: extend multi-call main

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -8,7 +8,7 @@ run:
     - gotocjson
     - libtransit
     - deprecated
-    - connectors/nsca-connector
+    - connectors/nsca
   skip-files:
     - \.pb\.go$
   modules-download-mode: readonly
