--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,6 +1,16 @@
 run:
-  # Default: use Go version from the go.mod file, fallback on the env var `GOVERSION`, fallback on 1.17
-  # go: '1.23'
+  go: '1.23'
+  skip-dirs:
+    - vendor
+    - bin
+    - var
+    - tmp
+    - gotocjson
+    - libtransit
+    - deprecated
+    - connectors/nsca
+  skip-files:
+    - \.pb\.go$
   modules-download-mode: readonly
 
 govet:
@@ -24,11 +34,11 @@ linters:
     - staticcheck
     - stylecheck
     - unconvert
-# TODO:    - unparam
+    # TODO:    - unparam
     - unused
     - whitespace
-# TODO:    - gocognit
-# TODO:    - gocyclo
+  # TODO:    - gocognit
+  # TODO:    - gocyclo
   disable:
     - depguard
     - gochecknoglobals
@@ -43,17 +53,6 @@ linters:
 
 issues:
   # Excluding configuration per-path, per-linter, per-text and per-source
-  exclude-dirs:
-    - vendor
-    - bin
-    - var
-    - tmp
-    - gotocjson
-    - libtransit
-    - deprecated
-    - connectors/nsca
-  exclude-files:
-    - \.pb\.go$
   exclude-rules:
     - path: _test\.go
       linters:
