--- a/connectors/azure/tcg_config.yaml
+++ b/connectors/azure/tcg_config.yaml
@@ -1,7 +1,7 @@
 connector:
   agentId: ""
-  appName: TCG-AZURE
-  appType: TCG-AZURE
+  appName: TCGAZURE
+  appType: TCGAZURE
   controllerAddr: 0.0.0.0:8099
   natsFilestoreDir: natsstore
   natsStoreType: FILE
